# lib/api/model/index.ts
@@ -10,8 +10,12 @@ export * from './contactMessageDTO';
 export * from './faqItemDTO';
 export * from './getAllPostsParams';
 export * from './getPostBySlugParams';
+export * from './getSitemapCategoriesParams';
+export * from './getSitemapPostsParams';
 export * from './postDTO';
 export * from './postTranslationDTO';
+export * from './sitemapCategoryDTO';
+export * from './sitemapPostDTO';
 export * from './submitMessageParams';
 export * from './tagDTO';
 export * from './websiteDTO';
